[workspace]
resolver = "2"
members = ["bandmeter"]
default-members = ["bandmeter"]

[workspace.package]
license = "MIT"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
aya = { version = "0.13", default-features = false }

[profile.release.package.bandmeter-ebpf]
debug = 2
codegen-units = 1
