[package]
name = "bandmeter-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
bandmeter-common = { path = "../bandmeter-common" }

aya-ebpf = { version = "0.1", default-features = false }
aya-log-ebpf = { version = "0.1", default-features = false }

[build-dependencies]
which = { version = "6.0.0", default-features = false }

[[bin]]
name = "bandmeter-ebpf-bin"
path = "src/main.rs"
