[package]
name = "bandmeter"
version = "0.1.0"
edition.workspace = true

[dependencies]
bandmeter-common = { path = "../bandmeter-common" }

chrono = { version = "0.4.44", features = [
    "std",
    "clock",
], default-features = false }
rusqlite = "0.38.0"

gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"

anyhow = { workspace = true, default-features = true }
aya = { workspace = true, features = ["async_tokio"] }
aya-log = { version = "0.2", default-features = false }
bytes = "1.11.1"
libc = { version = "0.2.159", default-features = false }
tokio = { version = "1.40.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
    "time"
] }
tokio-util = { version = "0.7" }


[build-dependencies]
anyhow = { workspace = true }
aya-build = { version = "0.1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
bandmeter-ebpf = { path = "../bandmeter-ebpf" }
